tests/invariants/pass/concreteexponent.act
constructor of Exponentiation
interface constructor(uint256 x)

iff in range uint256
    x ^ (100 - 5 * 19)

creates

    uint256 xpow5 := x ^ (100 - 5 * 19)

invariants

    xpow5 == x ^ 5